--- a/django_practice_3/templates/index.html
+++ b/django_practice_3/templates/index.html
@@ -41,29 +41,7 @@
   <h3>Add a new Artist</h3>
   <form action="{% url 'create_artist' %}" method='POST'>
     {% csrf_token %}
-    <div>
-      Artistic name: <input type="text" name='artistic_name'> *
-    </div>
-    <div>
-      First name: <input type="text" name='first_name'>
-    </div>
-    <div>
-      Last name: <input type="text" name='last_name'>
-    </div>
-    <div>
-      Picture url: <input type="url" name='picture_url'>
-    </div>
-    <div>
-      Popularity: <input type="number" min="0" max="100" value="0" name='popularity'>
-    </div>
-    <div>
-      Genre: <input type="text" name='genre'>
-    </div>
-    <br>
-    <div>
-        <i>Note: inputs with "*" symbol are required.</i>
-    </div>
-    <input type="submit" value="Add Artist">
+    <!-- Add here the fields for the 'Add Artist' form -->
   </form>
   <hr>
 
@@ -76,8 +54,7 @@
         <!-- Form for deleting an Artist -->
         <form action="{% url 'delete_artist' %}" method='POST' class='inline'>
           {% csrf_token %}
-          <input type="hidden" name="artist_id" value="{{ artist.id }}">
-          <input type="submit" name='delete_artist' value='Delete'>
+          <!-- Add here the fields for the 'Delete Artist' form -->
         </form>
         <ul>
           {% for song in artist.song_set.all %}
