--- a/django_practice_3/templates/index.html
+++ b/django_practice_3/templates/index.html
@@ -39,7 +39,7 @@
 
   <!-- Create Artist form -->
   <h3>Add a new Artist</h3>
-  <form action="{% url 'create_artist' %}" method='POST'>
+  <form action="" method='POST'> <!--  Add propper URL in form's action -->
     {% csrf_token %}
     <!-- Add here the fields for the 'Add Artist' form -->
   </form>
@@ -52,7 +52,7 @@
       <li>
         <label>{{ artist.artistic_name }}</label>
         <!-- Form for deleting an Artist -->
-        <form action="{% url 'delete_artist' %}" method='POST' class='inline'>
+        <form action="" method='POST' class='inline'> <!--  Add propper URL in form's action -->
           {% csrf_token %}
           <!-- Add here the fields for the 'Delete Artist' form -->
         </form>
