--- a/django_practice_3/templates/index.html
+++ b/django_practice_3/templates/index.html
@@ -39,9 +39,32 @@
 
   <!-- Create Artist form -->
   <h3>Add a new Artist</h3>
-  <form action="" method='POST'> <!--  Add propper URL in form's action -->
+  <form action="{% url 'create_artist' %}" method='POST'> 
     {% csrf_token %}
-    <!-- Add here the fields for the 'Add Artist' form -->
+    <!-- Add fields for the 'Add Artist' form -->
+    <div>
+      Artistic name: <input type="text" name='artistic_name'> *
+    </div>
+    <div>
+      First name: <input type="text" name='first_name'>
+    </div>
+    <div>
+      Last name: <input type="text" name='last_name'>
+    </div>
+    <div>
+      Picture url: <input type="text" name='picture_url'>
+    </div>
+    <div>
+      Popularity: <input type="number" name='popularity'> 
+    </div>
+    <div>
+      Genre: <input type="text" name='genre'>
+    </div>
+    <br>
+    <div>
+      <i>Note: inputs with "*" symbol are required.</i>
+    </div>
+    <input type="submit" value="Add Artist">
   </form>
   <hr>
 
