Add artist form implemented

--- a/django_practice_3/templates/index.html
+++ b/django_practice_3/templates/index.html
@@ -52,7 +52,7 @@
       Last name: <input type="text" name='last_name'>
     </div>
     <div>
-      Picture url: <input type="text" name='picture_url'>
+      Picture url: <input type="url" name='picture_url'>
     </div>
     <div>
       Popularity: <input type="number" name='popularity'> 
