--- a/django_practice_3/templates/index.html
+++ b/django_practice_3/templates/index.html
@@ -75,7 +75,7 @@
       <li>
         <label>{{ artist.artistic_name }}</label>
         <!-- Form for deleting an Artist -->
-        <form action="{% url 'delete_artist' %}" method='POST' class='inine'>
+        <form action="{% url 'delete_artist' %}" method='POST' class='inline'>
           {% csrf_token %}
           <input type="hidden" name="artist_id" value="{{ artist.id }}">
           <input type="submit" name='delete_artist' value='Delete'>
