--- a/django_practice_3/templates/index.html
+++ b/django_practice_3/templates/index.html
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body>
-  <!-- Create Song form -->
+  <!-- Song form begins -->
   <h3>Add a new Song</h3>
   <form action="{% url 'create_song' %}" method='POST'>
     {% csrf_token %}
@@ -37,11 +37,33 @@
   </form>
   <hr>
 
-  <!-- Create Artist form -->
+  <!-- Artist form begins -->
   <h3>Add a new Artist</h3>
-  <form action="" method='POST'> <!--  Add propper URL in form's action -->
+  <form action="{% url 'create_artist' %}" method='POST'>
     {% csrf_token %}
-    <!-- Add here the fields for the 'Add Artist' form -->
+    <div>
+      Artistic name: <input type="text" name='artistic_name'> *
+    </div>
+    <div>
+      First name: <input type="text" name='first_name'>
+    </div>
+    <div>
+      Last name: <input type="text" name='last_name'>
+    </div>
+    <div>
+      Picture url: <input type="url" name='picture_url'>
+    </div>
+    <div>
+      Popularity: <input type="number" min="0" max="100" value="0" name='popularity'>
+    </div>
+    <div>
+      Genre: <input type="text" name='genre'>
+    </div>
+    <br>
+    <div>
+        <i>Note: inputs with "*" symbol are required.</i>
+    </div>
+    <input type="submit" value="Add Artist">
   </form>
   <hr>
 
@@ -52,9 +74,10 @@
       <li>
         <label>{{ artist.artistic_name }}</label>
         <!-- Form for deleting an Artist -->
-        <form action="" method='POST' class='inline'> <!--  Add propper URL in form's action -->
+        <form action="{% url 'delete_artist' %}" method='POST' class='inline'>
           {% csrf_token %}
-          <!-- Add here the fields for the 'Delete Artist' form -->
+          <input type="hidden" name="artist_id" value="{{ artist.id }}">
+          <input type="submit" name='delete_artist' value='Delete'>
         </form>
         <ul>
           {% for song in artist.song_set.all %}
