--- a/django_practice_3/templates/index.html
+++ b/django_practice_3/templates/index.html
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body>
-  <!-- Song form begins -->
+  <!-- Create Song form -->
   <h3>Add a new Song</h3>
   <form action="{% url 'create_song' %}" method='POST'>
     {% csrf_token %}
@@ -37,10 +37,11 @@
   </form>
   <hr>
 
-  <!-- Artist form begins -->
+  <!-- Create Artist form -->
   <h3>Add a new Artist</h3>
-  <form action="{% url 'create_artist' %}" method='POST'>
+  <form action="{% url 'create_artist' %}" method='POST'> <!--  Add propper URL in form's action -->
     {% csrf_token %}
+    <!-- Add here the fields for the 'Add Artist' form -->
     <div>
       Artistic name: <input type="text" name='artistic_name'> *
     </div>
@@ -51,10 +52,10 @@
       Last name: <input type="text" name='last_name'>
     </div>
     <div>
-      Picture url: <input type="url" name='picture_url'>
+      Picture url: <input type="text" name='picture_url'>
     </div>
     <div>
-      Popularity: <input type="number" min="0" max="100" value="0" name='popularity'>
+      Popularity: <input type="text" name='popularity'>
     </div>
     <div>
       Genre: <input type="text" name='genre'>
@@ -74,8 +75,9 @@
       <li>
         <label>{{ artist.artistic_name }}</label>
         <!-- Form for deleting an Artist -->
-        <form action="{% url 'delete_artist' %}" method='POST' class='inline'>
+        <form action="{% url 'delete_artist' %}" method='POST' class='inline'> <!--  Add propper URL in form's action -->
           {% csrf_token %}
+          <!-- Add here the fields for the 'Delete Artist' form -->
           <input type="hidden" name="artist_id" value="{{ artist.id }}">
           <input type="submit" name='delete_artist' value='Delete'>
         </form>
